# hh_karamelo

./: .gitignore  CMakeLists.txt
examples/Taylor-bar/cylindrical/ULMPM/: cylindrical_taylor_bar.mpm
src/: dump_particle.cpp  fix_initial_velocity_particles.cpp  fix_velocity_nodes.cpp  hh3_taylorbar_demo.cpp  input.h  mpm.cpp  mpm.h  musl.cpp  pointers.h  solid.cpp  solid.h  style_command.h  style_compute.h  style_damage.h  style_eos.h  style_fix.h  style_method.h  style_region.h  style_scheme.h  style_strength.h  style_temperature.h  ulmpm.cpp  ulmpm.h
